hphp/test/zend/bad/ext/imap/tests/bug63126.php.skipif
<?php
extension_loaded('imap') or die('skip imap extension not available in this build');

require_once(dirname(__FILE__).'/imap_include.inc');

$in = imap_open($default_mailbox, $username, $password, OP_HALFOPEN, 1);
if (!$in) {
    die("skip could not connect to mailbox $default_mailbox");
}
$kerberos = false;
if (is_array($errors = imap_errors())) {
    foreach ($errors as $err) {
        if (strstr($err, 'GSSAPI') || strstr($err, 'Kerberos')) {
            $kerberos = true;
        }
    }
}
if (!$kerberos) {
    die("skip need a GSSAPI/Kerberos aware server");
}
?>